test/error/0002-redefinition3.c
/*
PATTERN: x
*/

struct x {
	int x;
	int y;
	int x;
};
